@@ -546,6 +546,10 @@ Trunk (unreleased changes)
     HADOOP-2687. Modify a few log message generated by dfs client to be
     logged only at INFO level. (stack via dhruba)
 
+    HADOOP-2402. Fix BlockCompressorStream to ensure it buffers data before
+    sending it down to the compressor so that each write call doesn't
+    compress. (Chris Douglas via acmurthy) 
+
 Release 0.15.3 - 2008-01-18
 
   BUG FIXES
